Design-set1/style.css
*{
    margin: 0px;
    border: 0px;
    box-sizing: border-box;
}
@font-face {
    font-family: font-1;
    src: url(Fonts/static/SpaceGrotesk-SemiBold.ttf);
}
@font-face {
    font-family: font-bold;
    src: url(Fonts/static/SpaceGrotesk-Bold.ttf);
}
header{
    background-color: rgb(3, 42, 49);
    width: 100%;
    position: relative;
}
.container{
    width: 1500px;
    margin:0 auto;
    
    
}
.left{
    color: white;
    width: 750px;
    display: inline-block;
   
}
.right{
    width: 750px;
    float: right;
    
    
}
.left li{
   
    list-style-type: none;
    padding: 35px 20px;
    display: inline-block;
  
    
}
.left ul li a{
    border-right: 1px solid white;
    padding: 34px;
}






.right li{
   
    list-style-type: none;
    padding: 35px 20px;
    display: inline-block;
  

    
}
.right ul li a{
    border-right: 1px solid white;
    padding: 34px;
}


a{
    text-decoration: none;
    color: white;
    font-family: font-1;
    
}
.li-1{
    background-image: url('Icons/pin.png');
    background-repeat: no-repeat;
    background-position: left;
    font-family: font-1;
   
   
    
}
.li-2{
    background-image: url('Icons/time.png');
    background-repeat: no-repeat;
    background-position: left;
    font-family: font-1;
}
.fb{
    background-image: url('Icons/facebook.png');
    background-repeat: no-repeat;
    background-position: left;
    
    
}
.lnkd{
    background-image: url('Icons/linkedin.png');
    background-repeat: no-repeat;
    background-position: left;

}
.youtb{
    background-image: url('Icons/youtube.png');
    background-repeat: no-repeat;
    background-position: left;
}
.twit{
    background-image: url('Icons/twitter.png');
    background-repeat: no-repeat;
    background-position: left;
}
.navbar{
    width: 100%;
    position: relative;
   
}
.left-section{
    width: 750px;
    float: left;
}
.right-section{
    width: 750px;
    float: right;
    padding: 15px;
}

.enterprise{
    background-image: url('Images/logo.svg');
    background-repeat: no-repeat;
    padding: 14px 0px;
    transform: translate(37px, 32px);
    background-size:contain;

}
.right-section .list-1 li a {
    color: black;
    padding-right: 10px;
}
.right-section .list-2 li a {
    color: black;
    padding-left: 10px;
}
.right-section ul{
   transform: translateY(30%);
    display: inline-block;
}
.list-1 li{
    list-style-type: none;
    display: block;
    text-align: left;
}

.list-2 li{
    text-align: left;
    list-style-type: none;
    display: block;
}
.list-1{
    background-image: url(Icons/phone.png);
    background-repeat: no-repeat;
    background-position: left;
    text-align: right;
    
}
.list-2{
    background-image: url('Icons/email.png');
    background-repeat: no-repeat;
    background-position: left;
    text-align: right;
}
.navbar2{
    position: relative;
    width: 100%;
    background-color: #813D16;
    display: flex;
    align-items: center;
    justify-content: space-between;
   transform: translateY(34%);
   padding: 20px 0px;
}
.navbar2-left{
    width: 750px;
    float: left;
   padding: 20px 0;
  
}
.navbar2-right
{
    white-space: 750px;
    float: right;
    position: relative;
   
}
.nav2-list li{
    color: black;
    display: inline-block;
    padding: 10px;
   
}

.search-bar{
    height: 60px;
    width: 250px;
    border: none;
    opacity: 0.2;
    
}
.search-icon{
    background-image: url(Icons/search.png);
    background-repeat: no-repeat;
    height: 30px;
    width: 30px;
    float: right;
    transform: translate(-32px, 23px);
    background-color: rgb(154,98,69);
    
    
    
}
::placeholder{
    font-weight: bolder;
    font-family: font-bold;
    color: black;
}
.search-btn{
    border: none;
}
.banner{
height: 700px;
width: 100%;
background-image: url(Images/banner.jpg);
position: relative;
background-repeat: no-repeat;
transform: translateY(33px);
background-size: cover;

}
.overlay{
    position: absolute;
    background-color: black;
    height: 700px;
    width: 100%;
    opacity: 0.8;
}
.overlay-text{
    color: white;
    font-size: 60px;
    transform: translateY(150px);
    font-family: font-bold;
    
}
.overlay-text2{
    color: white;
    font-family: font-1;
    transform: translateY(180px);
    font-family: font-1;
    font-size: 20px;
}
.services{
    height: 60px;
    width: 180px;
    background-color: white;
    /* transform: translate(170px,210px); */
    
    display: flex;
    align-items: center;
    justify-content: center;
}
.service-text{
    color: #813D16;;
}

.circle{
    height: 80px;
    width: 80px;
    border-radius: 50%;
    background-color: #813D16;
}
.extras{
    width: 450px;
    height: 120px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    transform: translateY(190px);
   
   
}
.play-icon{
    background-image: url(Icons/play.png);
    background-repeat: no-repeat;
    height: 30px;
    width: 30px;
    transform: translate(28px,30px);
    
}
.hew{
    color: white;
    font-family: font-1;
    font-size: 20px;
}
footer{
    width: 100%;
    height: 180px;
    background-color: rgb(3, 42, 49);
    display: flex;
    align-items: center;
    justify-content: space-between;
    transform: translateY(33px);
    text-align: center;
   
}
.foot-list {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    font-size: 28px;
    text-align: center;
    
    
}
.foot-list li{
    list-style-type: none;
    border-right: 1px solid white;
   
    
}
.foot-list li:last-child{
    border: none;
}
.foot-a{
 
   text-align: center;
}
.foot-1,.foot-2,.foot-3,.foot-4,.foot-5,.foot-6,.foot-7{
    padding: 53px 70px;
    
}
.foot-1{
    background-image: url(Icons/deadline.png);
    background-repeat: no-repeat;
    background-position: left;
}
.foot-2{
    background-image:url(Icons/price.png);
    background-repeat: no-repeat;
    background-position: left;
}
.foot-3{
    background-image: url(Icons/quality.png);
    background-repeat: no-repeat;
    background-position: left;
}
.foot-4{
    background-image: url(Icons/performance.png);
    background-repeat: no-repeat;
    background-position: left;
}
.foot-5{
    background-image: url(Icons/comms.png);
    background-repeat: no-repeat;
    background-position: left;
}
.foot-6{
    background-image: url(Icons/support.png);
    background-repeat: no-repeat;
    background-position: left;
}

